# Offline-Ai-Chatbot

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: database_helper.dart
lib/native/: native_client.dart
lib/providers/: chat_provider.dart  settings_provider.dart
lib/services/: llm_service.dart
lib/ui/: chat_screen.dart  home_screen.dart  settings_screen.dart
lib/utils/: prompt_builder.dart
native/: CMakeLists.txt  llm_wrapper.cpp  llm_wrapper_real.cpp
windows/runner/: Runner.rc
